# bagheera-clipseg

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
hello_clipseg/: __init__.py  __main__.py  main.py
hello_clipseg/cli/: __init__.py  segment.py
hello_clipseg/util/: load_image.py  load_model.py  plot.py  segment.py
